16-ingress/03-01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-space
spec: {}
status: {}
