16-ingress/03-05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress-space
spec:
  ports:
    - name: "80"
      port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30080
  selector:
    name: nginx-ingress
  type: NodePort
