16-ingress/02-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pay
  namespace: critical-space
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: pay-service
                port:
                  number: 8282
            path: /pay
            pathType: Prefix
